# phonetic-atlas-ja

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  SKILL.md  acronyms.json  aligner.py  docker-compose.yml  index.html  ja_dict.py  package-lock.json  package.json  requirements.txt  sample_cache.py  server-bundle.spec  server.py  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  server_launcher.py  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: dictionary-card-ux.md  japanese-pipeline.md  teleprompter-overlay-plan.md  transcript-schema.md  tts-audio-tags.md
mockups/: overlay.html
samples/ja-pm-role/: meta.json  transcript.txt
samples/tom-pets/: enrichment.json  meta.json  transcript.txt
schemas/: transcript.schema.json
scripts/: align_transcript.py  apply_enrichment.py  check_alignment.py  check_phonemes.py  process_samples.py  redeploy-overlay.sh  regen_v2.py  report_ipa_sources.py
src/: app.ts  camera.ts  contour.ts  dict.ts  hints.ts  ipa.ts  lang.ts  overlay.css  overlay.ts  player.ts  recorder.ts  styles.css  timing.ts  types.ts
src/__tests__/: contour.test.ts  hints.test.ts  ipa.test.ts  lang.test.ts  timing.test.ts
tests/: test_aligner_normalize.py  test_ja_dict.py
