[package]
name = "phonetic-atlas-overlay"
version = "0.1.0"
description = "Teleprompter overlay for phonetic-atlas"
edition = "2021"
rust-version = "1.77"

[lib]
name = "phonetic_atlas_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
objc = "0.2"
